--- a/mestre.css
+++ b/mestre.css
@@ -1,7 +1,5 @@
 .mainDiv {
-    margin: 10px;
-    padding: 10px;
-    align: center;
-    vertical-align: center;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 }
